c/src/test/resources/c/mini_bnc/invalid/ex43Simp.ctrl
<controlFile>
  <sourceFile name="ex43Simp.c" id="1" />
  <run>
    <startPosition fileId="1" line="36" />
    <wayPoint fileId="1" line="44" >
      <loop iterTimes="2" >
        <wayPoint fileId="1" line="45" >
          <function funcName="bufAlloc" >
            <wayPoint fileId="1" line="31" >
              <command>
                <cascadeFunction> cascade_check </cascadeFunction>
                <argument><![CDATA[
                  valid(&b->dataWriteEvidence[1])
                ]]>
                </argument>
              </command>
            </wayPoint>
          </function>
        </wayPoint>
      </loop>
    </wayPoint>
    <endPosition fileId="1" line="47" />
  </run>
</controlFile>